--- a/models/src_my_source.yml
+++ b/models/src_my_source.yml
@@ -2,8 +2,8 @@ version: 2
 sources:
     -
         name: my_source
-        database: KEBOOLA_3194
-        schema: WORKSPACE_380649405
+        database: dbt_transformation_ci
+        schema: dbt_transformation_ci
         tables:
             -
                 name: test
