Fix bucket name

--- a/models/src_my_source.yml
+++ b/models/src_my_source.yml
@@ -3,7 +3,7 @@ sources:
     -
         name: my_source
         database: '{{ env_var("DBT_KBC_PROD_DATABASE") }}'
-        schema: in.c-test
+        schema: in.c-test-bucket
         tables:
             -
                 name: test
