--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,9 +35,9 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
-      materialized: view
-      
-quoting:
-  database: true
-  schema: true
-  identifier: true
+      materialized: table
+
+#quoting:
+#  database: true
+#  schema: true
+#  identifier: true
