--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,7 +35,7 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
-      materialized: table
+      materialized: view
 
 #quoting:
 #  database: true
