--- a/models/src_my_source.yml
+++ b/models/src_my_source.yml
@@ -1,6 +1,9 @@
 version: 2
 sources:
     -
-        name: test
+        name: dbo
         database: test
         schema: dbo
+        tables:
+            -
+                name: test
