--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,8 +35,8 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
-      materialized: view
-      
+      materialized: table
+
 quoting:
   database: true
   schema: true
